--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://bg.tscn", "res://main.tscn", "res://world.tscn", "res://Player/Player.tscn", "res://Frog.tscn", "res://game_over.tscn", "res://UI/pause_menu.tscn", "res://ladder.tscn", "res://Collectibles/Cherry.tscn")
-current_scene="res://world.tscn"
+current_scene="res://Frog.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
