--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Global/Game.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sunny-land-files/Graphical Assets/", "res://Sunny-land-files/Graphical Assets/sprites/", "res://Sunny-land-files/Graphical Assets/sprites/player/", "res://Sunny-land-files/Graphical Assets/sprites/frog/idle/", "res://Sunny-land-files/Graphical Assets/PSD/sprites/", "res://Sunny-land-files/Graphical Assets/GIF Previews/", "res://sunny-land/assets/", "res://sunny-land/assets/sprites/", "res://Global/", "res://Collectibles/")
+dock_filesystem_selected_paths=PackedStringArray("res://Sunny-land-files/Graphical Assets/environment/Props/bush.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sunny-land-files/", "res://Sunny-land-files/Graphical Assets/", "res://Sunny-land-files/Graphical Assets/sprites/", "res://Sunny-land-files/Graphical Assets/sprites/player/", "res://Sunny-land-files/Graphical Assets/sprites/frog/idle/", "res://Sunny-land-files/Graphical Assets/PSD/sprites/", "res://Sunny-land-files/Graphical Assets/GIF Previews/", "res://Sunny-land-files/Graphical Assets/environment/", "res://Sunny-land-files/Graphical Assets/environment/Props/", "res://Global/", "res://Collectibles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://bg.tscn", "res://main.tscn", "res://world.tscn", "res://Player/Player.tscn", "res://Frog.tscn", "res://game_over.tscn", "res://UI/pause_menu.tscn", "res://ladder.tscn", "res://Collectibles/Cherry.tscn")
-current_scene="res://Frog.tscn"
+open_scenes=PackedStringArray("res://bg.tscn", "res://main.tscn", "res://world.tscn", "res://Player/Player.tscn", "res://Frog.tscn", "res://UI/health_bar.tscn")
+current_scene="res://world.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://BG.gd", "res://Frog.gd", "res://Global/Game.gd", "res://game_over.gd", "res://ladder.gd", "res://main.gd", "res://UI/Overwrite.gd", "res://UI/pause_menu.gd", "res://UI/pause_menu_2.gd", "res://Player/Player.gd", "res://Global/Utils.gd", "res://world.gd"]
-selected_script="res://Frog.gd"
+open_scripts=["res://BG.gd", "res://Frog.gd", "res://Global/Game.gd", "res://game_over.gd", "res://Player/HealthBar.gd", "res://ladder.gd", "res://main.gd", "res://UI/Overwrite.gd", "res://UI/pause_menu.gd", "res://UI/pause_menu_2.gd", "res://Player/Player.gd", "res://Global/Utils.gd", "res://world.gd"]
+selected_script=""
 open_help=[]
 script_split_offset=243
 list_split_offset=0
