Janky ass sword
No more jumping damage. Added a janky ass sword. Character now follows mouse movement. Left click to swing sword. If sword collides with frog, frog takes damage. When climbing ladders the sword will hide. Sword damage is equal to player power. I think i fixed the health bars???

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -12,6 +12,12 @@ list=Array[Dictionary]([{
 "path": "res://Player/Player.gd"
 }, {
 "base": &"Node2D",
+"class": &"Sword",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/sword.gd"
+}, {
+"base": &"Node2D",
 "class": &"WorldManager",
 "icon": "",
 "language": &"GDScript",
