--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 8.0,
-"selection": false,
+"row": 6,
+"scroll_position": 1.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 65,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
+"row": 44,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,12 +49,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 121,
-"scroll_position": 110.0,
-"selection": false,
+"row": 46,
+"scroll_position": 33.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 46,
+"selection_to_column": 43,
+"selection_to_line": 46,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +81,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 18.0,
+"row": 28,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -217,11 +225,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 7.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -264,6 +272,20 @@ state={
 "h_scroll_position": 0,
 "row": 1,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Player/sword.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
