--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,6 +17,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Player/sword.gd"
 }, {
+"base": &"AnimatedSprite2D",
+"class": &"Sword_Fencing",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/sword_fencing.gd"
+}, {
 "base": &"Node2D",
 "class": &"WorldManager",
 "icon": "",
