--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Player/Player.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Addons/fencing_default.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sunny-land-files/Graphical Assets/sprites/", "res://Sunny-land-files/Graphical Assets/sprites/player/", "res://Sunny-land-files/Graphical Assets/sprites/frog/idle/", "res://Sunny-land-files/Graphical Assets/PSD/sprites/", "res://Sunny-land-files/Graphical Assets/GIF Previews/", "res://Player/", "res://Collectibles/", "res://Addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://bg.tscn", "res://main.tscn", "res://world.tscn", "res://Player/Player.tscn", "res://Frog.tscn", "res://Player/sword_fencing.tscn", "res://UI/instructions.tscn")
-current_scene="res://main.tscn"
+current_scene="res://UI/instructions.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://BG.gd", "res://Frog.gd", "res://Global/Game.gd", "res://game_over.gd", "res://Player/HealthBar.gd", "res://UI/instructions.gd", "res://ladder.gd", "res://main.gd", "res://UI/Overwrite.gd", "res://UI/pause_menu.gd", "res://Player/Player.gd", "res://Player/sword.gd", "res://Player/sword_fencing.gd", "res://Global/Utils.gd", "res://world.gd"]
-selected_script="res://main.gd"
+selected_script="res://UI/instructions.gd"
 open_help=[]
 script_split_offset=170
 list_split_offset=0
