Updated Sword and Sword Collision

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Player/Player.gd"
 }, {
+"base": &"AnimatedSprite2D",
+"class": &"SmallSword",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Player/small_sword.gd"
+}, {
 "base": &"Node2D",
 "class": &"Sword",
 "icon": "",
